<resources>
    <string name="app_name">Sampahku1</string>
    <string name="login">Silahkan Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_akun_baru">Silahkan Daftar Akun Baru</string>
    <string name="abdurrahman_hanifah">Abdurrahman Hanifah</string>
    <string name="abdul_gmail_com">abdul@gmail.com</string>
    <string name="masuk">Masuk</string>
    <string name="silahkan_masuk_dengan_akun_yang_nsudah_terdaftar">Silahkan masuk dengan akun\n yang sudah terdaftar</string>
    <string name="selamat_datang_di_aplikasi_sampahku">Selamat datang di aplikasi Sampahku</string>
    <string name="atau_daftar_akun_baru">atau daftar akun baru</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mulai_hitung">Mulai Hitung</string>
    <string name="mulai_pisahkan_sampah">Mulai pisahkan sampah</string>
    <string name="identifikasi_sampah">Identifikasi sampah</string>
    <string name="lihat_riwayat_perhitungan">Lihat riwayat perhitungan</string>
    <string name="lihat_riwayat">Lihat riwayat</string>
    <string name="perhitung">Untuk memulai perhitungan:\n1. Silahkan ambil gambar atau pilih dari galeri</string>
    <string name="ambil_gambar">Ambil gambar</string>
    <string name="_2_silahkan_pilih_lokasi">2. Silahkan pilih lokasi</string>
    <string name="welcome">Selamat datang!\nmulai identifkasi\nsampahmu</string>
    <string name="abdullah">Abdullah</string>
    <string name="hello_vito">Hello, Vito</string>
    <string name="kategori_sampah">Kategori sampah</string>
    <string name="tanggal_daur_ulang_sampah">Tanggal daur ulang sampah</string>
</resources>